appId: com.junewiregames.starborn.prealpha
---
- launchApp:
    clearState: false
- extendedWaitUntil:
    visible: "New Game"
    timeout: 60000
- extendedWaitUntil:
    visible: "Debug Scenarios"
    timeout: 10000
- tapOn: "Debug Scenarios"
- extendedWaitUntil:
    visible: "Search world, quest, room, or system"
    timeout: 10000
- tapOn: "Search world, quest, room, or system"
- eraseText
- inputText: "Red Alert"
- runScript: sleep.js
- extendedWaitUntil:
    visible: "Resume MQ04 during the escape.*"
    timeout: 10000
- tapOn: "Resume MQ04 during the escape.*"
- extendedWaitUntil:
    visible: "Maintenance Access"
    timeout: 15000
- extendedWaitUntil:
    notVisible: "Engage Resonance Buoy"
    timeout: 1000
- tapOn: "Travel north.*"
- extendedWaitUntil:
    visible: "Cargo Lift"
    timeout: 15000
- extendedWaitUntil:
    visible: "Quest Updated"
    timeout: 10000
- extendedWaitUntil:
    notVisible: "Quest Updated"
    timeout: 10000
- extendedWaitUntil:
    notVisible: "Engage Acoustic Bulwark"
    timeout: 1000
- tapOn: "Jed"
- extendedWaitUntil:
    visible: ".*Warden.s closing the lift.*"
    timeout: 10000
- tapOn: "Dialogue Popup. Tap to continue"
- extendedWaitUntil:
    visible: ".*Zeke.s opened a route.*"
    timeout: 10000
- tapOn: "Dialogue Popup. Tap to continue"
- extendedWaitUntil:
    visible: ".*Let go of this lever.*brake drops.*"
    timeout: 10000
- tapOn: "Dialogue Popup. Tap to continue"
- extendedWaitUntil:
    visible: ".*You always have a spare.*"
    timeout: 10000
- tapOn: "Dialogue Popup. Tap to continue"
- extendedWaitUntil:
    visible: ".*Take the Chime.*"
    timeout: 10000
- tapOn: "Dialogue Popup. Tap to continue"
- extendedWaitUntil:
    visible: ".*I kept fixing your cutter.*"
    timeout: 10000
- tapOn: "Dialogue Popup. Tap to continue"
- extendedWaitUntil:
    visible: ".*Let me do this much.*"
    timeout: 10000
- tapOn: "Dialogue Popup. Tap to continue"
- extendedWaitUntil:
    notVisible: "Dialogue Popup"
    timeout: 10000
- extendedWaitUntil:
    visible: "Item acquired: Ghost Signal Cell.*"
    timeout: 15000
- tapOn: "Item acquired: Ghost Signal Cell.*"
- extendedWaitUntil:
    notVisible: "Item acquired: Ghost Signal Cell.*"
    timeout: 10000
- extendedWaitUntil:
    visible: "QUEST COMPLETED"
    timeout: 15000
- assertVisible: "Red Alert"
- tapOn: "Continue"
- extendedWaitUntil:
    visible: "New Quest"
    timeout: 15000
- assertVisible: "The Launch"
- tapOn: "Continue"
- extendedWaitUntil:
    notVisible: "New Quest"
    timeout: 10000
- assertVisible: "Cargo Lift"
- takeScreenshot: mainquest-red-alert
